# rag-a-ma-jig

./: .env  .gitignore  README.md  main.py  pyproject.toml
test_data/: queries.py
